--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 
         <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
 
+        <link rel="preload" href="./fonts/Montserrat.ttf" as="font" crossorigin="anonymous" />
+        <link rel="preload" href="./fonts/Fraunces.ttf" as="font" crossorigin="anonymous" />
+
         <link rel="stylesheet" href="styles/main.css" />
 
         <title>Frontend Mentor | Product preview card component</title>
@@ -14,11 +17,5 @@
         Perfume Gabrielle Essence Eau De Parfum A floral, solar and voluptuous interpretation
         composed by Olivier Polge, Perfumer-Creator for the House of CHANEL. $149.99 $169.99 Add to
         Cart
-
-        <div class="attribution">
-            Challenge by
-            <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a
-            >. Coded by <a href="#">Your Name Here</a>.
-        </div>
     </body>
 </html>
