--- a/index.html
+++ b/index.html
@@ -13,9 +13,36 @@
 
         <title>Frontend Mentor | Product preview card component</title>
     </head>
-    <body>
-        Perfume Gabrielle Essence Eau De Parfum A floral, solar and voluptuous interpretation
-        composed by Olivier Polge, Perfumer-Creator for the House of CHANEL. $149.99 $169.99 Add to
-        Cart
+    <body class="flex min-h-screen items-center bg-cream px-4 py-5">
+        <div class="h-full w-full overflow-clip rounded-xl bg-white">
+            <img
+                class="w-full"
+                src="./images/image-product-mobile.jpg"
+                alt="A photo of the product"
+            />
+            <div class="px-6 pt-4.5 pb-5.5">
+                <span class="text-[0.75rem]/normal tracking-[0.3rem] text-grey uppercase"
+                    >Perfume</span
+                >
+                <h2 class="mt-3 mb-4 font-serif text-3xl/[1] font-bold text-black">
+                    Gabrielle Essence Eau De Parfum
+                </h2>
+                <p class="text-sm/relaxed text-grey">
+                    A floral, solar and voluptuous interpretation composed by Olivier Polge,
+                    Perfumer-Creator for the House of CHANEL.
+                </p>
+                <p class="mt-5 flex items-center gap-7">
+                    <span class="font-serif text-3xl/normal font-bold text-green-500">$149.99</span
+                    ><span class="text-xs/normal text-grey"><del>$169.99</del></span>
+                </p>
+                <button
+                    class="mt-1 w-full rounded-lg bg-green-500 py-4 text-sm/normal font-bold text-white hover:cursor-pointer hover:bg-green-700"
+                    type="button"
+                >
+                    <img class="mr-1 inline" src="./images/icon-cart.svg" alt="Cart icon" /> Add to
+                    Cart
+                </button>
+            </div>
+        </div>
     </body>
 </html>
